...
    private func proceedToNextQuestionOrResults() {
        if self.isLastQuestion() {
            let viewModel = AlertModel(
                title: "Этот раунд окончен!",
                message: makeResultsMessage(),
                buttonText: "Сыграть ещё раз") { }
            alertPresenter?.show(quiz: viewModel, identifier: "Game Results")
            self.restartGame()
            self.correctAnswers = 0
        } else {
            self.switchToNextQuestion()
            questionFactory?.requestNextQuestion()
        }
...
